kiwix-tools 1.2.2
=================

kiwix-manage
-----------

 * Better usage()

kiwix-serve
-----------

 * Better usage()
 * Display properly welcome page on 3 columns

kiwix-tools 1.2.1
=================

kiwix-serve
-----------

 * Always use POLL when avaible.

kiwix-tools 1.2.0
=================

 * Remove rpath for installed binaries.

kiwix-serve
-----------

 * New Dockerfile of kiwix-serve
 * New --nodatealiases option
 * Do not use POLL on windows

kiwix-manage
------------

 * Do not show all books if book ids has been provided.
 * Be able to add several zim files in the same time in a library.

kiwix-tools 1.1.0
=================

kiwix-serve
-----------

 * Fix bug about handling of absolute url in old zim file.
 * All the catalog to be searched by tags.

kiwix-tools 1.0.0
=================

 * [CI] Use the new deps archive xz
 * Move version 1.0.0. There is no need to stay in pre 1.0 version.

kiwix-serve
-----------

 * Correctly implement redirection.
   kiwix-serve now return a 302 http status code instead of resolving the
   redirection internally and return the content.


kiwix-tools 0.9.0
=================

 * Update README
 * Update man pages
 * Remove support of external indexes (manage, search, serve)
 * Update build system as we don't use ctpp2 anymore
 * Update to last kiwix-lib API.

kiwix-manage
------------

 * Update usage.


kiwix-tools 0.8.0
=================

kiwix-manage
------------

 * Be able to remove several books from the library in one command.

kiwix-tools 0.7.0
=================

 * Adapt to kiwix-lib new API

kiwix-serve
-----------

 * Dumps only valid books in the opdsfeed.
 * Allow the opds feed to be filtered by lang and paginated.

kiwix-manage
------------

 * Add a download command to download a remote book locally
 * Book are referenced by bookId not index.
 * No more indexType option as it is always XAPIAN.

kiwix-tools 0.6.1
=================

kiwix-serve
-----------

 * Update README.