@@ -46,5 +46,10 @@
 <div class="kiwix">
   __BOOKS__
 </div>
+
+<div id="kiwixfooter">
+  Powered by <a href="https://kiwix.org">Kiwix</a>
+</div>
+
 </body>
 </html>
